[gd_scene load_steps=3 format=3 uid="uid://bhf7afhuksbra"]

[ext_resource type="Script" uid="uid://mdhk6xftw3lv" path="res://ui/ammo_display.gd" id="1_ammo"]
[ext_resource type="FontFile" uid="uid://c3w61p24ge26h" path="res://snowbell-font/Snowbell-Wp4g9.ttf" id="2_gqkhs"]

[node name="AmmoDisplay" type="CanvasLayer"]
script = ExtResource("1_ammo")

[node name="AmmoContainer" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="BulletIcon" type="TextureRect" parent="AmmoContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="AmmoLabel" type="Label" parent="AmmoContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_gqkhs")
theme_override_font_sizes/font_size = 32
text = "12 / 12"
horizontal_alignment = 2
vertical_alignment = 1
